added circle amount display and prevented bypassing circle limit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Cool Animation</h1>
 
         <div class="circle__counter__root">
-            <p class="circle__counter__number">0</p>
+            <p class="circle__counter__number" id="circleCounter">0</p>
         </div>
 
         <form id="animationSettings">
