added radio buttons for border behavior

--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
 
 
 
+            <p class="form__paragraph__middle">Border Behavior</p>
+
+            <div class="input__radio__container">
+                <input type="radio" id="borderBounce" name="borderBehavior" value="borderBounce"></input>
+                <label for="borderBounce">Bounce</label>
+            </div>
+            <div class="input__radio__container">
+                <input type="radio" id="borderWarp" name="borderBehavior" value="borderWarp"></input>
+                <label for="borderWarp">Warp</label>
+            </div>
+
+
+
+
             <p class="form__paragraph__middle">Max circles</p>
             
             <input class="input__range" type="range" id="maxCircles" name="maxCircles" min="0" max="100"></input>
