adjusted border elasticity behavior and input

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <input class="input__range" type="range" id="dragModifier" name="dragModifier" min="0" max="200"></input>
             </div>
             <div class="input__range__long__container">
-                <label class="label__long" for="elasticityModifier">Elasticity Modifier: x<span class="label__number" id="currentElasticityModifier">1</span></label><br>
+                <label class="label__long" for="elasticityModifier">Border Elasticity: <span class="label__number" id="currentElasticityModifier">1</span></label><br>
                 <input class="input__range" type="range" id="elasticityModifier" name="elasticityModifier" min="0" max="200"></input>
             </div>
 
